--- a/TODO
+++ b/TODO
@@ -1,2 +1,1 @@
-- Fix the weird Dates bug on events
-- Batch queries because HOLY SHIT 2100 ARGUMENTS FOR SESSIONS
+- Make sure there is no date bugs anymore on events/sessions
